--- a/Fin Control/manifest.json
+++ b/Fin Control/manifest.json
@@ -2,7 +2,9 @@
   "name": "Control Financiero Doméstico",
   "short_name": "FinControl",
   "description": "Aplicación para el control de gastos e ingresos domésticos",
-  "start_url": "./index.html",
+  "id": "fincontrol",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4CAF50",
